substitui variável inexistente por verificação de string vazia
Corrige erro de compilação na validação de produtos onde uma variável 'codigoProduto' era referenciada mas não existia no escopo do método. Implementa validação correta utilizando verificação de null, string vazia e string com apenas espaços em branco.